--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-.gradle/
-.idea/
-.build/
+# idea
+.idea
+*.iws
+*.iml
+*.ipr
+
+# gradle
+
+.gradle
+build
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**
 log.log
