--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ endif(UNIX)
 SET(VULKAN_LIB_LIST "vulkan")
 SET(CMAKE_CXX_STANDARD 17)
 
+SET(CMAKE_CXX_FLAGS "-O0")
+
 FILE(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 FILE(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.*)
 
